Fixes after mentor

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <header class = "border-head">
-      <div class="container top-line top">
+      <div class="top-line container top">
       <nav class="navig">
         <a class="logo" href="./index.html"
           >Web<span class="header-logo">Studio</span></a
@@ -42,13 +42,13 @@
     </div>
     </header>
     <main>
-      <section class="hero-image section">
+      <section class="hero-image">
         <div class="container hero">
         <h1 class="header-one">Effective Solutions for Your Business</h1>
         <button class="but-on" type="button">Order Service</button>
         </div>
       </section>
-      <section class="list section">
+      <section class="list">
         <div class="container cards top">
         <h2 class = "visually-hidden">Features</h2>
         <ul class="cards-ul">
@@ -220,7 +220,7 @@
     </main>
     <footer class="foot">
       <div class="container bottom">
-      <a class="logo" href="./index.html"
+      <a class="logo logo-foot" href="./index.html"
         >Web<span class="footer-logo">Studio</span></a
       >
       <p class="footer-text">
